--- a/pages/index/pages/getAddress/getAddress.wxss
+++ b/pages/index/pages/getAddress/getAddress.wxss
@@ -1,1 +1,76 @@
 /* pages/index/pages/getAddress.wxss */
+
+.header-view {
+  background-color: #fff;
+  margin-bottom: 8rpx;
+}
+
+.header-view view {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.header-view .vertical {
+  height: 54rpx;
+  width: 1rpx;
+  background-color: #777;
+}
+
+.city-info-view {
+  font-size: 28rpx;
+  padding-left: 36rpx;
+}
+
+.city-info-view image {
+  width: 17rpx;
+  height: 17rpx;
+  padding: 36rpx 18rpx;
+  vertical-align: middle;
+}
+
+.input-view {
+  width: 66%;
+  margin-left: 20rpx;
+}
+
+.input-view input {
+  height: 54rpx;
+  width: 100%;
+}
+
+.clean-view {
+  padding: 16rpx;
+}
+
+.clean-view image {
+  width: 36rpx;
+  height: 36rpx;
+  vertical-align: middle;
+}
+
+.now-item image {
+  width: 60rpx;
+  height: 60rpx;
+  padding: 20rpx 20rpx 30rpx;
+  vertical-align: -86%;
+}
+
+.now-item {
+  background-color: #fff;
+}
+
+.now-item:active {
+  background-color: #f5f5f5;
+}
+
+.now-item > view {
+  display: inline-block;
+}
+
+.address-tit {
+  font-size: 30rpx;
+}
+
+.address-info {
+  font-size: 22rpx;
+}
