--- a/pages/tabBar/me/me.wxml
+++ b/pages/tabBar/me/me.wxml
@@ -1,2 +1,65 @@
 <!--pages/tabBar/me/me.wxml-->
-<text>pages/tabBar/me/me.wxml</text>
+<view class='container'>
+  <view>
+    <view class='header mb-8'>
+      <view class='clearfix small-logo-view'>
+        <view class='small-logo fr'>定价</view>
+      </view>
+      <view class='avatar-name-something-view clearfix'>
+        <image class='fl'></image>
+        <view class='fl'>
+          <view class='clearfix'>
+            <view class='fl name'>狗蛋</view>
+            <view class='fl job'>拾粪者</view>
+          </view>
+          <view class='tel'>13333333333</view>
+        </view>
+        <view class='arrow'>›</view>
+      </view>
+    </view>
+    <view class='address-view'>
+      <view class='bb clearfix mb-8' bindtap='bindGoGetAddress'>
+        <image class='fl' src='../../../image/icon/car.png'></image>
+        <view class="fl address-info">
+          系统通知
+        </view>
+        <view class='fl arrow'>›</view>
+      </view>
+      <view class='bb clearfix bb' bindtap='bindGoGetAddress'>
+        <image class='fl' src='../../../image/icon/car.png'></image>
+        <view class="fl address-info">
+          支付记录
+        </view>
+        <view class='fl arrow'>›</view>
+      </view>
+      <view class='bb clearfix mb-8' bindtap='bindGoGetAddress'>
+        <image class='fl' src='../../../image/icon/car.png'></image>
+        <view class="fl address-info">
+          收费标准
+        </view>
+        <view class='fl arrow'>›</view>
+      </view>
+      <view class='bb clearfix mb-8' bindtap='bindGoGetAddress'>
+        <image class='fl' src='../../../image/icon/car.png'></image>
+        <view class="fl address-info">
+          联系人管理
+        </view>
+        <view class='fl arrow'>›</view>
+      </view>
+      <view class='bb clearfix bb' bindtap='bindGoGetAddress'>
+        <image class='fl' src='../../../image/icon/car.png'></image>
+        <view class="fl address-info">
+          帮助中心
+        </view>
+        <view class='fl arrow'>›</view>
+      </view>
+      <view class='bb clearfix mb-8' bindtap='bindGoGetAddress'>
+        <image class='fl' src='../../../image/icon/car.png'></image>
+        <view class="fl address-info">
+          意见反馈
+        </view>
+        <view class='fl arrow'>›</view>
+      </view>
+    </view>
+  </view>
+</view>
