订单页面完成

--- a/pages/index/pages/contact/contact.wxml
+++ b/pages/index/pages/contact/contact.wxml
@@ -1,7 +1,7 @@
 <!--pages/index/pages/Contact/contact.wxml-->
 <view class='container'>
   <view>
-    <view class='contact-item bb'>
+    <view class='contact-item bb' data-name='{{ "张大壮" }}' data-tel='{{ "13866666666" }}' bindtap='bindChsWho'>
       <view class='contact-name'>张大壮</view>
       <view class='contact-tel'>13866666666</view>
     </view>
