--- a/pages/index/pages/getAddress/getAddress.wxss
+++ b/pages/index/pages/getAddress/getAddress.wxss
@@ -65,15 +65,23 @@
 
 .now-item > view {
   display: inline-block;
+  width: 82%;
 }
 
 .address-tit {
   font-size: 30rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .address-info {
   font-size: 22rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
+
 .modal {
   width: 100%;
   height: 100%;
