--- a/pages/tabBar/index/index.wxss
+++ b/pages/tabBar/index/index.wxss
@@ -91,8 +91,12 @@
   font-size: 28rpx;
 }
 
-.address-view view view.address-info {
-  /* line-height: 90rpx; */
+.address-view view view.address-view {
+  width: 76%;
+  line-height: 86rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .address-view view view.arrow {
