--- a/pages/me/meInfo/meInfo.wxml
+++ b/pages/me/meInfo/meInfo.wxml
@@ -2,15 +2,27 @@
 <view class='container'>
   <view class='name clearfix bb'>
     <view class='fl'>姓名:</view>
-    <input class='fr' value='掏粪'></input>
+    <input class='fr' value='' placeholder='{{ Name }}' bindinput='bindGetName'></input>
   </view>
   <view class='tel clearfix bb'>
     <view class='fl'>电话:</view>
-    <input class='fr'value='133333333333'></input>
+    <input class='fr' value='' placeholder='{{ Tel1 }}' bindinput='bindGetCallTel01'></input>
+  </view>
+  <view class='tel clearfix bb'>
+    <view class='fl'></view>
+    <input class='fr' value='' placeholder='{{ Tel2 }}' bindinput='bindGetCallTel02'></input>
+  </view>
+  <view class='tel clearfix bb'>
+    <view class='fl'></view>
+    <input class='fr' value='' placeholder='{{ Tel3 }}' bindinput='bindGetCallTel03'></input>
   </view>
   <view class='company clearfix bb'>
     <view class='fl'>公司:</view>
-    <input class='fr' value='掏粪'></input>
+    <input class='fr' value='' placeholder='{{ Company }}' bindinput='bindGetCompany'></input>
   </view>
-  <button class='btn'>保存</button>
+  <view class='avatar clearfix bb'>
+    <view class='fl'>头像:</view>
+    <image class='fr' src='{{ Face }}'></image>
+  </view>
+  <button class='btn' bindtap='bindPullData'>保存</button>
 </view>
