--- a/pages/tabBar/order/order.wxss
+++ b/pages/tabBar/order/order.wxss
@@ -64,3 +64,8 @@
 .go-time-view > view:last-child {
   font-size: 26rpx;
 }
+.setAddress {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
