--- a/pages/me/book/book.wxml
+++ b/pages/me/book/book.wxml
@@ -7,9 +7,9 @@
       <view class='fr'>13866666666</view>
     </view>
     <view class='btn-view'>
-      <button>添加新联系人</button>
+      <button bindtap='bindIsShow'>添加新联系人</button>
     </view>
-    <view class='modal'>
+    <view wx:if ="{{ isShow }}" class='modal'>
       <view class='inp-view'>
         <view class='clearfix'>
           <view class='fl'>姓名</view>
@@ -20,7 +20,7 @@
           <input class='' maxlength="11" type="number" bindinput='bindTelValue'></input>
         </view>
         <view class='btns'>
-          <button>返回</button>
+          <button bindtap='bindIsShow'>返回</button>
           <button bindtap='bindThisMan'>确认</button>
         </view>
       </view>
