--- a/pages/tabBar/order/order.wxml
+++ b/pages/tabBar/order/order.wxml
@@ -7,25 +7,25 @@
     <view class="tab-item {{current == 4? 'active': ''}}" data-index="4" bindtap='navSwitch'>已完成</view>
   </view>
   <view class='main-item-view'>
-    <view class='item bb' bindtap='bindGoOrderInfo'>
+    <view wx:for="{{ data }}" wx:key="{{ item.ID }}" class='item bb' data-id='{{ item.ID }}' bindtap='bindGoOrderInfo'>
       <view class='car-menoy-view clearfix'>
         <view class='fl'>中型货车</view>
-        <view class='fr'>￥100</view>
+        <view class='fr'>￥{{item.Price}}</view>
       </view>
       <view class='this_address'>
-        <view>
+        <view class='setAddress'>
           <image src='../../../image/icon/car.png'></image>
-          济南市火车站
+          {{ item.SendAddr }}
         </view>
       </view>
       <view class='go-time-view clearfix'>
-        <view class='fl'>
+        <view class='fl setAddress'>
           <image src='../../../image/icon/add.png'></image>
-          济南市火车站
+          {{ item.ReciveAddr }}
         </view>
         <view class='fl'>
           <image src='../../../image/icon/time.png'></image>
-          2018-7-15 10:23:08
+          {{ item.SendTime }}
         </view>
       </view>
     </view>
