--- a/pages/order/pages/orderInfo/orderInfo.wxml
+++ b/pages/order/pages/orderInfo/orderInfo.wxml
@@ -2,7 +2,7 @@
 <view class='container'>
   <view class='box'>
     <view class='header mb-8'>
-      <view class='clearfix bb'>
+      <view wx:if="{{current != 1}}" class='clearfix bb'>
         <view class='car fl'>
           <view>豫A 88666</view>
           <view>中型货车</view>
@@ -21,7 +21,7 @@
           </view>
         </view>
       </view>
-      <view class='something clearfix'>
+      <view  wx:if="{{current != 1}}" class='something clearfix'>
         <view class='fl br'>
           <image src='../../../../image/icon/tel01.png'></image>
           拨打电话
@@ -39,37 +39,42 @@
     <view class='some-address mb-8'>
       <view class='bb'>
         <image src='../../../../image/icon/car.png'></image>
-        济南市火车站
+        {{ data.ReciveAddr }}
       </view>
       <view class='bb'>
         <image src='../../../../image/icon/add.png'></image>
-        济南市开发区物流中心
+        {{ data.SendAddr }}
       </view>
     </view>
     <view class='some-address'>
       <view class='bb'>
         <image src='../../../../image/icon/time.png'></image>
-        2018-7016 15:38:07
+        {{ data.SendTime }}
       </view>
       <view class='bb'>
         <image src='../../../../image/icon/who.png'></image>
-        济南
+        {{ data.ReciveName }}
       </view>
       <view class='bb'>
         <image src='../../../../image/icon/tel.png'></image>
-        济南
+        {{ data.RecivePhone }}
       </view>
-      <view class='info clearfix'>
+      <view  wx:if="{{current != 1}}" class='info clearfix'>
         <image class='fl' src='../../../../image/icon/info.png'></image>
         <view class='fl'>济南</view>
       </view>
     </view>
-    <view class='btns'>
-      <button class='go-map'>
-        <image src='../../../../image/icon/go-address.png'></image> 查看当前位置</button>
-      <button class='no'>取消订单</button>
+    <view wx:if="{{current == 1}}" class='btns'>
+      <!-- <button class='go-map'> -->
+        <!-- <image src='../../../../image/icon/go-address.png'></image> 查看当前位置</button> -->
+        <button  class='no' bindtap='bindDel'>取消订单</button>
     </view>
-    <view class='grade-box'>
+    <view wx:if="{{current == 2}}" class='btns'>
+      <button class='go-map' bindtap='bindGoMap'>
+        <image src='../../../../image/icon/go-address.png'></image> 查看当前位置</button>
+      <!-- <button class='no'>取消订单</button> -->
+    </view>
+    <view wx:if="{{current == 3}}" class='grade-box'>
       <view class='star-view clearfix'>
         <view class='fl'>评分:</view>
         <view class='stars fl clearfix'>
@@ -85,7 +90,7 @@
       </view>
       <button class='grade'>评价</button>
     </view>
-    <view class='over-order'>
+    <view wx:if="{{current == 2}}" class='over-order'>
       <view class='btns'>
         <button class='go-map'>立即支付</button>
         <button class='no'>完成订单</button>
