--- a/pages/order/pages/orderInfo/orderInfo.wxss
+++ b/pages/order/pages/orderInfo/orderInfo.wxss
@@ -61,6 +61,9 @@
   line-height: 88rpx;
   padding: 0 32rpx;
   background-color: #fff;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .some-address > view:active {
